@@ -31,8 +31,6 @@ Copyright: xmlBlaster.org, see xmlBlaster-LICENSE file
 #include <string>
 
 
-
-
 namespace org { namespace xmlBlaster { namespace util { namespace qos {
 
 class Dll_Export StatusQosData
@@ -50,6 +48,8 @@ private:
 
    /** The key oid of a publish(), helpful if the oid was generated by xmlBlaster */
    std::string keyOid_;
+
+   bool persistent_; // = DEFAULT_persistent;
 
    /** 
     * The receive timestamp (UTC time),
@@ -178,6 +178,15 @@ public:
     */
    void touchRcvTimestamp();
 
+   /**
+    * @param persistent mark a message as persistent
+    */
+   void setPersistent(bool persistent);
+
+   /**
+    * @return true/false
+    */
+   bool isPersistent() const;
 };
 
 }}}} // namespace
